[package]
name = "chip-8"
version = "0.1.0"
authors = ["Timo de Kort <dekort.timo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.21.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
rand = "0.7.3"
futures = "0.3.4"
euclid = "0.20.7"